# pybindgen

./: .gitignore  .mapping.json  CMakeLists.txt  LICENSE  README.md  ya.makeDISABLED
contrib/libs/clang16/include/: yamaker_mkdepdir.py
lib_example/: CMakeLists.txt  main.cpp  test.cpp  test.h  ya.make
py_build/: CMakeLists.txt  compile_commands.json  ya.make
pybind_example/: CMakeLists.txt
src/: CMakeLists.txt  generate_compile_commands.py  generator.cpp  generator.h  main.cpp  matcher.cpp  matcher.h  test.cpp  util.cpp  util.h  ya.make
tests/: run.sh  test_generated.py
ya_py_program_example/: __main__.py  ya.make
